@@ -3,6 +3,8 @@
 	* fixed bug #9215: tt_news 3.0 category ajaxtree looses language parameter on ajax expand/collapse 
 	* fixed bug #12757: IFNULL statements in tt_news queries are not DBAL compatible 
 	* updated context sensitive help (CSH)
+	* added missing xclass statement to class tt_news_cache
+	* updated ext_emconf.php	
 	
 2009-11-26  Rupert Germann <rupi@gmx.li>
 	* added flashmessages icons for older TYPO3 versions to folder compat/gfx
